ingress/Resource-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-auto
  template:
    metadata:
      labels:
        app: node-auto
    spec:
      containers:
        - name: my-containers
          image: anusocial123/node-app-image:latest
          ports:
            - containerPort: 3000 
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
