ingress/E-commerce-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-web-deployment
  labels:
    app: ecommerce-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce-web
  template:
    metadata:
      labels:
        app: ecommerce-web
    spec:
      containers:
      - name: ecommerce-container
        image: anusocial123/ecommerce-web:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-service
spec:
  selector:
    app: ecommerce-web
  ports:
    - protocol: TCP
      port: 83
      targetPort: 80
  type: ClusterIP
