ingress/Resto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resto-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resto-app
  template:
    metadata:
      labels:
        app: resto-app
    spec:
      containers:
      - name: resto-container
        image: muralisocial123/resto-image:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: resto-app-service
spec:
  selector:
    app: resto-web
  ports:
    - protocol: TCP
      port: 82
      targetPort: 80
  type: ClusterIP
