ingress/event-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-web-deployment
  labels:
    app: event-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-web
  template:
    metadata:
      labels:
        app: event-web
    spec:
      containers:
      - name: event-web-container
        image: anusocial123/event-web:latest
        ports:
        - containerPort: 86
---
apiVersion: v1
kind: Service
metadata:
  name: event-app-service
spec:
  selector:
    app: event-app
  ports:
  - protocol: TCP
    port: 86     
    targetPort: 8080
  type: ClusterIP
